--- a/authserver/pom.xml
+++ b/authserver/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ This file is part of Play.BnS project.
+  ~ This file is part of PlayBnS
   ~                      <https://github.com/HeXLaB/play.bns>
   ~
   ~ This program is free software; you can redistribute it and/or modify
