--- a/main/pom.xml
+++ b/main/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>slick_2.10</artifactId>
       <version>2.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
   <modules>
     <module>../commons</module>
