--- a/authserver/pom.xml
+++ b/authserver/pom.xml
@@ -30,7 +30,7 @@
   <packaging>jar</packaging>
 
   <parent>
-    <groupId>play.bns</groupId>
+    <groupId>hexlab.bns</groupId>
     <artifactId>main</artifactId>
     <version>0.1</version>
     <relativePath>../main/pom.xml</relativePath>
@@ -40,7 +40,11 @@
   <artifactId>authserver</artifactId>
 
   <dependencies>
-
+    <dependency>
+      <groupId>hexlab.bns</groupId>
+      <artifactId>commons</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
